[package]
name = "aura"
version = "0.1.0"
edition = "2021"
author = "Zyth"
about = "Tool to search and/or install AUR packages from the terminal"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
regex = { version = "1.5.5" }
serde = { version = "1.0", features = ["derive"] }
ansi_term = { version = "0.12.1" }
clap = { version = "3.1.6", features = ["derive"]  }